--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-ec2-run-instance-action",
+  "name": "docker-shared-image-tag-action",
   "version": "0.0.0",
   "private": true,
   "description": "GitHub action to run an EC2 instance",
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.43.0",
     "eslint-plugin-github": "^4.8.0",
+    "eslint-plugin-jest": "^27.2.2",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3"
