--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,13 @@ permissions:
   contents: write
 
 jobs:
+  build: # make sure build/ci work properly
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: |
+          npm install
+          npm run all
   test-new: # make sure the action works with a brand-new image tag
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Create shared Docker Image Tag
         id: create-tag
-        uses: ./
+        uses: ../../
         with:
           new-image-tag: "test-tag:${{ github.run_number }}"
           token: "${{ secrets.PERSONAL_TOKEN }}"
