reference directory of action.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: ls
       - name: Create shared Docker Image Tag
         id: create-tag
-        uses: ../../
+        uses: ./
         with:
           new-image-tag: "test-tag:${{ github.run_number }}"
           token: "${{ secrets.PERSONAL_TOKEN }}"
