--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "eslint": "^8.43.0",
     "eslint-plugin-github": "^4.8.0",
     "eslint-plugin-jest": "^27.2.2",
+    "jest": "^27.2.5",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3"
