--- a/action.yml
+++ b/action.yml
@@ -12,9 +12,9 @@ inputs:
     required: true
     description: 'The API or personal access token to authorize read and write access to Repository Variables. Note: secrets.GITHUB_TOKEN will not work here.'
   org:
-    description: Flag for organization
-    default: false
     required: false
+    description: 'Flag for organization'
+    default: 'false'
 
 outputs:
   image-tag:
